Fix displayed but invisible index nav

--- a/src/_sass/components/_index-nav.scss
+++ b/src/_sass/components/_index-nav.scss
@@ -31,6 +31,7 @@
 
 .index-nav {
   visibility: hidden;
+  display: none;
   opacity: 0;
   position: initial;
 
@@ -44,6 +45,7 @@
     visibility: visible;
     opacity: 1;
     position: initial;
+    display: block;
   }
 
   .open-mobile {
@@ -51,6 +53,7 @@
       visibility: visible;
       opacity: 1;
       position: initial;
+      display: block;
     }
   }
 }
